--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.3.7",
     "expo": "~37.0.3",
+    "expo-av": "^8.1.0",
     "expo-media-library": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "react": "~16.9.0",
@@ -21,6 +22,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-slider": "^0.11.0",
     "react-native-sound": "^0.11.0",
     "react-native-web": "~0.11.7"
   },
